# jni-utils-rs

./: Cargo.toml  LICENSE  README.md  build.rs
java/: build.gradle  settings.gradle
java/src/main/java/gedgygedgy/rust/future/: Future.java  FutureException.java  JavaObjectFuture.java  PollResult.java  SimpleFuture.java
java/src/main/java/gedgygedgy/rust/stream/: QueueStream.java  Stream.java  StreamPoll.java
java/src/main/java/gedgygedgy/rust/task/: Poll.java  PollResult.java  Waker.java
java/src/main/java/io/github/gedgygedgy/rust/future/: SimpleFuture.java
java/src/main/java/io/github/gedgygedgy/rust/ops/: FnBiFunctionImpl.java  FnOnceRunnable.java  FnRunnable.java  FnRunnableImpl.java
java/src/main/java/io/github/gedgygedgy/rust/stream/: QueueStream.java
java/src/main/java/io/github/gedgygedgy/rust/task/: Waker.java
rust/: arrays.rs  exceptions.rs  future.rs  lib.rs  ops.rs  stream.rs  task.rs  uuid.rs
rust/future/: mod.rs
rust/stream/: mod.rs
rust/task/: mod.rs
rust/uuid/: mod.rs
