[package]
name = "jni-utils"
version = "0.1.0"
authors = ["Gedgy Gedgy <gedgygedgy@protonmail.com>"]
edition = "2018"

[lib]
path = "rust/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.19.0"
static_assertions = "1.1.0"

[dev-dependencies]
lazy_static = "1.4.0"
futures = "0.3.15"
