[package]
name = "jni-utils"
version = "0.1.0"
authors = ["Gedgy Gedgy <gedgygedgy@protonmail.com>"]
edition = "2018"

[lib]
path = "rust/lib.rs"

[features]
build-java-support = []

[dependencies]
jni = "0.19.0"
static_assertions = "1.1.0"
uuid = "0.8.2"
futures = "0.3.15"

[dev-dependencies]
lazy_static = "1.4.0"
